# Point-Cloud-Registration-with-RGBD-camera

./: README.md  getPointcloud.cc  install.txt  readKeyboardInput.cpp
control_robot_arm/: 2d-shape-1-output.txt  control.py  motion-1.yaml  ps2-3.py
control_taker/: CMakeLists.txt  package.xml
control_taker/src/: control_taker.cpp
denso_robot_interface/: CMakeLists.txt  package.xml
denso_robot_interface/launch/: denso_robot_interface.launch
denso_robot_interface/msg/: JointState.msg
denso_robot_interface/nodes/: ps2-2.py
denso_robot_interface/srv/: ClearStates.srv  DeleteState.srv  ExecuteTrajectory.srv  GoTo.srv  MarkState.srv  ShowStates.srv  Translation.srv  Upload.srv
denso_robot_interface/test/: go_to_test.py
denso_robot_interface/yaml/: ps2_2.yaml  robot_interface.yaml  test.yaml  waypoints_test.yaml
my_tf/: CMakeLists.txt  package.xml
my_tf/src/: tf_publish.cpp
point_cloud_registration/: CMakeLists.txt  package.xml  pointcloud_octo.launch
point_cloud_registration/src/: keyboardInput.cpp  point_cloud_listener(backup).cpp  point_cloud_listener.cpp
tf_transform/: CMakeLists.txt  Instructions.txt  package.xml
tf_transform/src/: frame_tf_broadcaster.cpp
